<resources>
    <string name="app_name">CheckIn</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">CheckIn</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="code_fragment_label">打卡码</string>
    <string name="serial_number">序列号</string>
    <string name="name">名称</string>
    <string name="latitude">GPS经度</string>
    <string name="longitude">GPS纬度</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="state">状态</string>
    <string name="codeType">类型</string>
    <string name="name_should_not_empty">名称不能为空</string>
    <string name="dialog_title_confirm_delete">删除</string>
    <string name="dialog_confirm_delete_code">确认删除此打开码吗？</string>
    <string name="dialog_confirm_delete_task">确认删除此打开码吗？</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="start_time">开始日期</string>
    <string name="end_time">结束日期</string>
    <string name="description">备注</string>
    <string name="company">公司名称</string>
    <string name="record">打卡记录</string>
    <string name="distance">打卡距离（千米）</string>
    <string name="random_serialnumber">随机生成</string>
    <string name="current_location">当前位置</string>
    <string name="show_barcode">显示二维码</string>

    <string name="hello_first_fragment"></string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Check IN</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_license">LicenseActivity</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_logout">退出登录</string>
    <string name="action_create_task">创建打卡任务</string>
    <string name="task_fragment_label">打卡任务</string>
    <string name="record_fragment_label">打卡记录</string>
    <string name="idcard_fragment_label">证卡查验</string>
    <string name="wait_scan_dialog_title">芯片扫码</string>
    <string name="scan_chip">请把证卡芯片靠近手机进行扫码...</string>
    <string name="cancel">取消</string>
    <string name="ocr_check">OCR 查验</string>
    <string name="face_check">人脸识别</string>
    <string name="orc_fragment_label">OCR 证卡信息识别</string>

    <string name="MODEL_PATH_KEY">MODEL_PATH_KEY</string>
    <string name="LABEL_PATH_KEY">LABEL_PATH_KEY</string>
    <string name="IMAGE_PATH_KEY">IMAGE_PATH_KEY</string>
    <string name="CPU_THREAD_NUM_KEY">CPU_THREAD_NUM_KEY</string>
    <string name="CPU_POWER_MODE_KEY">CPU_POWER_MODE_KEY</string>
    <string name="DET_LONG_SIZE_KEY">DET_LONG_SIZE_KEY</string>
    <string name="SCORE_THRESHOLD_KEY">SCORE_THRESHOLD_KEY</string>


    <string name="MODEL_PATH_DEFAULT">models/ch_PP-OCRv2</string>
    <string name="LABEL_PATH_DEFAULT">labels/ppocr_keys_v1.txt</string>
    <string name="CPU_THREAD_NUM_DEFAULT">4</string>
    <string name="CPU_POWER_MODE_DEFAULT">LITE_POWER_HIGH</string>
    <string name="DET_LONG_SIZE_DEFAULT">960</string>
    <string name="SCORE_THRESHOLD_DEFAULT">0.1</string>
    <string name="action_create_code">创建打卡码</string>
</resources>