<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.paipeng.checkin.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/TaskFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_IdCardFragment"
            app:destination="@id/IdCardFragment" />
    </fragment>
    <fragment
        android:id="@+id/TaskFragment"
        android:name="com.paipeng.checkin.TaskFragment"
        android:label="@string/task_fragment_label"
        tools:layout="@layout/fragment_task">

        <action
            android:id="@+id/action_TaskFragment_to_RecordFragment"
            app:destination="@id/RecordFragment" />
        <action
            android:id="@+id/action_TaskFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/RecordFragment"
        android:name="com.paipeng.checkin.RecordFragment"
        android:label="@string/record_fragment_label"
        tools:layout="@layout/fragment_record">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/IdCardFragment"
        android:name="com.paipeng.checkin.IdCardFragment"
        android:label="@string/idcard_fragment_label"
        tools:layout="@layout/fragment_idcard">

        <action
            android:id="@+id/action_IdCardFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />


        <action
            android:id="@+id/action_IdCardFragment_to_OcrFragment"
            app:destination="@id/OcrFragment" />
    </fragment>
    <fragment
        android:id="@+id/OcrFragment"
        android:name="com.paipeng.checkin.OcrFragment"
        android:label="@string/orc_fragment_label"
        tools:layout="@layout/fragment_ocr">

        <action
            android:id="@+id/action_OcrFragment_to_OcrFragment"
            app:destination="@id/OcrFragment" />
    </fragment>
</navigation>